<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wave"
    android:id="@+id/main_layout"

    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="520dp"
                android:layout_height="151dp"
                android:height="64dp"
                android:background="@drawable/ic_wave_4"
                android:gravity="center" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            app:cardBackgroundColor="#FBFBFB"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"

                android:orientation="vertical">


                <!--            username textfield-->

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textSize="35sp"
                    android:textStyle="bold" />


                <!--            username textfield-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:elevation="10dp"
                    app:endIconMode="clear_text"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--            password textfield-->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:elevation="10dp"
                    app:endIconMode="clear_text"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/button_style"
                    android:elevation="10dp"
                    android:text="@string/login" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="#E91E63" />

                    <TextView

                        android:layout_width="24dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/or"
                        android:textSize="16sp"

                        android:textStyle="bold" />

                    <View
                        android:layout_width="80dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="#E91E63" />


                </LinearLayout>


                <TextView
                    android:id="@+id/login_sigup_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/signup_switch"

                    android:textSize="16sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

